core/src/test/resources/configurations/invalid/component-line-number.graph
component {

	# a comment

	installer: bash;
